packages/plover/test/fixtures/core/app/modules/syntax-error/index.js
module.exports = function() {
  yield '123';
  this.render();
}
